...
                        val icon =
                            if (favorite) Icons.Outlined.Favorite else Icons.Outlined.FavoriteBorder
                        Icon(imageVector = icon, contentDescription = null)
                    }
                    IconButton(
                        modifier = Modifier.clearAndSetSemantics {
                            contentDescription = "Confirm Note"
                        },
                        onClick = {
                            viewModel.saveNote()
                            if (!viewModel.isContentBlank()) {
                                onEvent(EditNoteScreenEvent.OnBackEvent)
                            }
...
                        .padding(horizontal = 16.dp)
                        .weight(1f)
                ) {
                    TextField(
                        modifier = Modifier
                            .paddingFrom(FirstBaseline, before = 40.dp, after = 0.dp)
                            .semantics { contentDescription = "Note Title" },
                        value = title,
                        placeholder = stringResource(R.string.note_title),
                        onValueChange = { viewModel.changeTitle(it) },
                        style = MaterialTheme.typography.h5
                    )

...
                        }
                    }

                    TextField(
                        modifier = Modifier
                            .paddingFromBaseline(top = 24.dp)
                            .semantics { contentDescription = "Note Content" },
                        value = content,
                        placeholder = stringResource(R.string.note_content),
                        onValueChange = { viewModel.changeContent(it) },
                        style = MaterialTheme.typography.body1
                    )
                }
...
