...
    }, sheetState = state) {
        Scaffold(
            scaffoldState = scaffoldState,
            floatingActionButton = {
                FloatingActionButton(
                    modifier = Modifier.clearAndSetSemantics {
                        contentDescription = "Create New Note"
                    },
                    onClick = { onEvent(CreateNoteEvent) }
                ) {
                    Icon(imageVector = Icons.Outlined.Add, contentDescription = null)
                }
            },
...
